--- a/main.css
+++ b/main.css
@@ -235,9 +235,15 @@ ul {
   padding-top: 10px;
   line-height: 1.5;
 }
-h3 {
+h3,
+h5 {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
+  font-style: normal;
+}
+p {
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
   font-style: normal;
 }
 
