--- a/main.css
+++ b/main.css
@@ -40,6 +40,7 @@ body {
   box-sizing: border-box;
   width: 100%;
   height: 100%;
+  background-color: var(--colorPink);
 }
 
 /*************** Menu ****************/
