--- a/sub-category.css
+++ b/sub-category.css
@@ -1,35 +1,56 @@
 /** @format */
 
-img {
-  max-width: 100%;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+}
+
+main {
+  background-color: #e782a9;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .container {
-  max-width: 800px;
+  width: 800px;
+  border: 1px solid #ddd;
+  background-color: #fff;
 }
 
 .content {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  /* grid-template-rows: repeat(4, 1fr); */
+  background-color: #1f3a56;
+  color: #fff;
+  padding: 15px;
+  font-weight: bold;
+  font-size: 16px;
 }
 
-h3 {
-  background-color: #233249;
-  color: white;
+.list {
+  list-style: none;
+  padding: 15px;
 }
 
-.h3-style {
-  grid-column: 1 / 3;
-  grid-row: 1;
+.list li {
+  padding: 20px 0;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
 }
 
-.book-style {
-  grid-column: 1;
-  grid-row: 2;
+a {
+  text-decoration: none;
+  padding: 20px 0;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+  color: black;
 }
 
-.img-style {
-  grid-column: 2;
-  grid-row: 2;
+.icon {
+  color: red;
+  margin-right: 10px;
+  margin-left: 20px;
 }
