--- a/single-view.css
+++ b/single-view.css
@@ -1,31 +1,105 @@
 body {
-    background-color: #E782A9;
-    overflow-x: hidden;
+  background-color: #e782a9;
+  overflow-x: hidden;
 }
 
 .title_container {
-    background-color: #233249;
-    width: 85%;
+  background-color: #233249;
+  width: 85%;
 }
 
 .title_container h1 {
-    margin-left: 30px;
-    margin-bottom: 0;
-    padding-left: 10px;
-    color: white;
-    font-family: var(--overskrifter);
-    font-size: 20px;
-    border-left: 2px solid white;
-    padding-top: 5px;
-    padding-bottom: 5px;
+  margin-left: 30px;
+  margin-bottom: 0;
+  padding-left: 10px;
+  color: white;
+  font-family: var(--overskrifter);
+  font-size: 20px;
+  border-left: 2px solid white;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .product_container {
-    border: 1px solid rgb(255, 255, 255);
-    background-color: white;
-    margin-right: 15%;
-    margin-left: 15%;
-    margin-top: 0;
-    margin-bottom: 10rem;
+  border: 1px solid rgb(255, 255, 255);
+  background-color: white;
+  margin-right: 15%;
+  margin-left: 15%;
+  margin-top: 0;
+  margin-bottom: 10rem;
 }
 
+#canon-eos {
+  width: 100%;
+  scale: 0.9;
+  border-bottom: 2px solid black;
+}
+
+.single-view-form {
+  display: grid;
+  width: 80%;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  margin-top: 0;
+}
+
+h2 {
+  font-family: var(--overskrifter);
+  font-weight: var(--bold);
+  margin: 20px;
+}
+
+label {
+  font-family: var(--overskrifter);
+  font-weight: var(--regular);
+  margin-top: 20px;
+}
+
+#f-name {
+  border: 1px solid black;
+  height: 20px;
+  font-family: var(--overskrifter);
+  font-weight: var(--regular);
+}
+
+#f-email {
+  border: 1px solid black;
+  height: 20px;
+  font-family: var(--overskrifter);
+  font-weight: var(--regular);
+}
+
+#f-dato {
+  border: 1px solid black;
+  height: 20px;
+  margin-top: 2px;
+  font-family: var(--overskrifter);
+  font-weight: var(--regular);
+}
+
+#f-Antal {
+  border: 1px solid black;
+  height: 20px;
+  width: 50px;
+  font-family: var(--overskrifter);
+  font-weight: var(--regular);
+}
+
+#reserver_btn {
+  color: white;
+  background-color: #233249;
+  border: none;
+  font-family: var(--overskrifter);
+  margin-top: 20px;
+  width: 50%;
+  height: 40px;
+}
+
+#reserver_btn:hover {
+  background-color: #7596d8;
+}
+
+#udlaand_p {
+  font-weight: var(--bold);
+}
